// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mark renders 0 1`] = `
Array [
  .c0 {
  mark: 0;
}

<div
    className="c0"
  />,
  .c0 {
  mark: 0;
}

<div
    className="c0"
  />,
  .c0 {
  mark: 0;
}

<div
    className="c0"
  />,
  .c0 {
  mark: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`mark renders function 1`] = `
Array [
  .c0 {
  mark: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  mark: has;
}

<div
    className="c0"
  />,
  .c0 {
  mark: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  mark: has;
}

<div
    className="c0"
  />,
]
`;

exports[`mark renders invalid theme path 1`] = `
Array [
  .c0 {
  mark: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  mark: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  mark: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  mark: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`mark renders negative number 1`] = `
Array [
  .c0 {
  mark: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  mark: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  mark: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  mark: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`mark renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    mark: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    mark: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    mark: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    mark: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    mark: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    mark: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    mark: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    mark: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    mark: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`mark renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    mark: July;
  }
}

@media April {
  .c0 {
    mark: August;
  }
}

@media January {
  .c0 {
    mark: September;
  }
}

@media April {
  .c0 {
    mark: November;
  }
}

@media June {
  .c0 {
    mark: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    mark: July;
  }
}

@media April {
  .c0 {
    mark: August;
  }
}

@media January {
  .c0 {
    mark: September;
  }
}

@media April {
  .c0 {
    mark: November;
  }
}

@media June {
  .c0 {
    mark: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    mark: January;
  }
}

@media April {
  .c0 {
    mark: December;
  }
}

@media January {
  .c0 {
    mark: April;
  }
}

@media April {
  .c0 {
    mark: May;
  }
}

@media June {
  .c0 {
    mark: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    mark: January;
  }
}

@media April {
  .c0 {
    mark: December;
  }
}

@media January {
  .c0 {
    mark: April;
  }
}

@media April {
  .c0 {
    mark: May;
  }
}

@media June {
  .c0 {
    mark: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`mark renders postitive number 1`] = `
Array [
  .c0 {
  mark: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  mark: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  mark: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  mark: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`mark renders string 1`] = `
Array [
  .c0 {
  mark: July;
}

<div
    className="c0"
  />,
  .c0 {
  mark: July;
}

<div
    className="c0"
  />,
  .c0 {
  mark: June;
}

<div
    className="c0"
  />,
  .c0 {
  mark: June;
}

<div
    className="c0"
  />,
]
`;

exports[`mark renders valid theme path 1`] = `
Array [
  .c0 {
  mark: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  mark: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  mark: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  mark: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
